# rBergomi

./: .gitignore  .precommit-config.yaml  README.md  pyproject.toml
rbergomi/: utils.py
src/: rbergomi.py  utils.py
src/cnn/: cnn.py  utils.py
src/rbergomi/: rbergomi.py
