[project]
name = "rbergomi"
version = "0.1.0"

dependencies = [
    "numpy ~= 1.22.0",
    "matplotlib ~= 3.4.3",
    "tensorflow ~= 2.13.0",
    "scipy ~= 1.7.3",
    "pandas ~= 2.1.1",
    "scikit-learn ~= 1.3.1"
]



[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src"]